major simplification and rewrites for final architecture