@@ -1,20 +1,18 @@
-package de.ddm.profiler;
+package de.ddm.structures;
 
+import com.opencsv.CSVReader;
+import com.opencsv.exceptions.CsvException;
 import lombok.AllArgsConstructor;
-import lombok.Data;
+import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
-
+import org.apache.commons.lang3.builder.HashCodeExclude;
 import java.io.IOException;
 import java.io.StringReader;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
-
-import com.opencsv.CSVReader;
-import com.opencsv.exceptions.CsvException;
 
 /**
  * Contains:
@@ -28,10 +26,12 @@ import com.opencsv.exceptions.CsvException;
 
 @AllArgsConstructor
 public class Table {
-    public String name;
-    public List<String> attributes = new ArrayList<>();
-    public List<Column> columns = new ArrayList<>();
-    public List<Integer> positions = new ArrayList<>();
+    @AllArgsConstructor
+    @EqualsAndHashCode
+    public static class Attribute {
+        public String tableName;
+        public String attribute;
+    }
 
     /**
      * represents a column in a table
@@ -40,19 +40,24 @@ public class Table {
      * @see Value
      *
      */
-    @Data
-    @AllArgsConstructor
     @NoArgsConstructor
     public static class Column {
         public List<Value> values = new ArrayList<>();
     }
+
+    public String name;
+    public List<Attribute> attributes = new ArrayList<>();
+    public List<Column> columns = new ArrayList<>();
+    public List<Integer> positions = new ArrayList<>();
 
     public static Table parseCSV(String csvString, String tableName) throws IOException, CsvException {
         CSVReader reader = new CSVReader(new StringReader(csvString));
         List<String[]> lines = reader.readAll();
         reader.close();
 
-        List<String> tableAttributes = new ArrayList<>(Arrays.asList(lines.get(0)));
+        List<Attribute> tableAttributes = List.of(lines.get(0)).stream()
+            .map(attr -> new Attribute(tableName, attr))
+            .collect(Collectors.toList());
         tableAttributes.remove(0); // remove position column
 
         List<Integer> tablePositions = new ArrayList<>();
@@ -68,10 +73,17 @@ public class Table {
         return new Table(tableName, tableAttributes, tableColumns, tablePositions);
     }
 
-    public Stream<ValueWithPosition> streamColumnWithPositions(int colIndex, int rangeBegin, int rangeEndInclusive) {
+    public IntStream streamPositions(){
+        return this.positions.stream().mapToInt(i -> i);
+    }
+
+    public Stream<Value.WithPosition> streamColumnWithPositions(int colIndex, int rangeBegin, int rangeEndInclusive) {
         Column column = this.columns.get(colIndex);
         return IntStream.range(0, this.positions.size())
                 .filter(i -> this.positions.get(i) > rangeBegin && this.positions.get(i) <= rangeEndInclusive)
-                .mapToObj(i -> new ValueWithPosition(column.values.get(i), this.positions.get(i)));
+                .mapToObj(i -> new Value.WithPosition(column.values.get(i), this.positions.get(i)));
+    }
+    public Stream<Value.WithPosition> streamColumnWithPositions(int colIndex){
+        return this.streamColumnWithPositions(colIndex, 0, this.columns.get(colIndex).values.size());
     }
 }
